@@ -1,4 +1,4 @@
-#Wed Dec 08 15:47:23 CET 2010
+#Mon Dec 20 08:19:16 CET 2010
 eclipse.preferences.version=1
 encoding//.processed/src/javax/speech/AudioEvent.java=Cp1252
 encoding//.processed/src/javax/speech/AudioException.java=Cp1252
