@@ -10,10 +10,6 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.sound.sampled.AudioFormat;
-import javax.sound.sampled.AudioInputStream;
-import javax.sound.sampled.AudioSystem;
-import javax.sound.sampled.LineUnavailableException;
-import javax.sound.sampled.TargetDataLine;
 import javax.speech.AudioException;
 import javax.speech.EngineException;
 import javax.speech.EngineStateException;
@@ -268,11 +264,6 @@ public final class SapiRecognizer extends JseBaseRecognizer {
     
     
     
-    @Override
-    protected EnginePropertyChangeRequestListener getChangeRequestListener() {
-        return null;
-    }
-
     void startRecognition() {
         start(recognizerHandle);
     }
